--- a/public/conf_2012/developer-toolbelt/index.html
+++ b/public/conf_2012/developer-toolbelt/index.html
@@ -18,7 +18,7 @@
 
     
 
-    <link rel="stylesheet" href="http://localhost:1313/css/blog.css">
+    <link rel="stylesheet" href="http://localhost:1313/css/blog.min.css">
 
 </head>
     <body>
