--- a/public/conf_2012/index.html
+++ b/public/conf_2012/index.html
@@ -16,7 +16,7 @@
 
     <link rel="icon" type="image/ico" href="img/favicon.ico"/>
 
-<link rel="stylesheet" href="http://localhost:1313/css/blog.css">
+<link rel="stylesheet" href="http://localhost:1313/css/blog.min.css">
 <body>
     <div class="visualwrapper">
     <div class="overlay"></div>
