--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 
     
 
-    <link rel="stylesheet" href="http://localhost:1313/css/home.css">
+    <link rel="stylesheet" href="http://localhost:1313/css/home.min.css">
 
 </head>
     <body>
@@ -55,12 +55,12 @@
           <section>
              <div class="block-home">
                 <div class="block-home-visual">
-                  <a href="about.html" class="img-border">
+                  <a href="about" class="img-border">
                     <img src="img/portret-small.jpg" alt="zelfportret" />
                   </a>
                 </div>
                 <div class="block-home-text">
-                  <h2><a href="about.html">About me</a></h2>
+                  <h2><a href="about">About me</a></h2>
                   <p>
                     My name is Mirella van Teulingen and I'm a Dutch front end developer.
                     I work in a team of python and javascript developers at
