Add js files, using a partial template.

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-    <!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -109,7 +109,11 @@
                 </div>
               </div>
           </section>
-        </div>
-        
+      </div>
+      <script src="http://localhost:1313/js/fastclick.min.js"></script>
+<script src="http://localhost:1313/js/base.min.js"></script>
+
+
+
     </body>
 </html>
