Update about text, tweak homepage.

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -104,8 +104,8 @@ extending my knowledge with <a href="http://sass-lang.com/">SASS</a>,
 
 <p>Since 2012 am I a member of <a href="http://www.fronteers.nl">Fronteers</a>,
 a Dutch non-profit trade organisation for front end developers.
-Since the end of 2013 I&rsquo;m a volunteer at the workshops committee. We
-organise <a href="https://fronteers.nl/workshops">workshops</a> about
+From 2013 till 2015, I volunteered the workshops committee. This committee
+organises <a href="https://fronteers.nl/workshops">workshops</a> about
 front end techniques, which everyone can attend for a small fee.</p>
 
 <h3 id="interesting-blogs-and-podcasts">Interesting Blogs and Podcasts</h3>
