Update about text.

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -91,11 +91,9 @@
 I have the privilege to work in a team of experts in python, javascript
 and design.</p>
 
-<p>The key areas of experience include HTML, CSS, Django templating. I also
-have experience with XML, XSLT, <a href="http://www.plone.org">Plone</a> and
-Zope Page Templates (templating used in Plone). The last few years I&rsquo;m
-extending my knowledge with <a href="http://sass-lang.com/">SASS</a>,
-<a href="http://lesscss.org/">LESS</a>, jQuery and javascript.</p>
+<p>The key areas of experience include HTML, CSS, Sass, jQuery, DOM scripting and Django templating.
+I also have experience with XML, XSLT, <a href="http://www.plone.org">Plone</a> and
+Zope Page Templates (templating language used in Plone).</p>
 
 <p>Detailed information about my working experience can be found on
 <a href="http://www.linkedin.com/in/mirellavanteulingen">LinkedIn</a>.</p>
