--- a/public/fronteers/index.html
+++ b/public/fronteers/index.html
@@ -74,6 +74,24 @@
                 
                      <li role="listitem">
     <h2>
+        <a href="http://www.mirellavanteulingen.nl/fronteers/conf_2016/" class="title">Fronteers Conference 2016</a>
+    </h2>
+    <div class="blog-date">October 10, 2016</div>
+    Thursday 8 and Friday 9 October was the epic Fronteers conference. The topics were quite diverse from Progressive enhancement to webVR, from svg animations to mind blowing data visualisations. But also the future of the web had been discussed and how to deal with the Asian market which still use feature phones with proxy browser and a horrible data connection. This article is a summary with the highlights of the 2 day event.
+    <a href="http://www.mirellavanteulingen.nl/fronteers/conf_2016/"
+            class="read-more">
+        <span>Read more</span>
+        <svg viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                <rect x="0" y="0.044921875" width="47.8613281" height="47.8613281" rx="3"></rect>
+                <polygon fill="#FFFFFF" points="15.953776 32.8406817 24.8151846 23.9772997 15.9538799 15.1141774 20.3852074 10.6807726 33.6784628 23.9773517 20.3853113 37.2703993"></polygon>
+            </g>
+        </svg>
+    </a>
+</li>
+                
+                     <li role="listitem">
+    <h2>
         <a href="http://www.mirellavanteulingen.nl/fronteers/conf_2014/" class="title">Fronteers Conference 2014</a>
     </h2>
     <div class="blog-date">October 15, 2014</div>
