--- a/public/fronteers/conf_2016/index.html
+++ b/public/fronteers/conf_2016/index.html
@@ -110,7 +110,7 @@
         talk was about progressive enhancement and css by Ire Aderinokun.
     </p>
     <p>
-        The basics is are:
+        The basics are:
    </p>
    <ol>
         <li>basic content and functionality should be accessible to all web browsers. </li>
@@ -155,7 +155,7 @@
         Scott Helme gave an introduction about modern web security standards:
     </p>
     <ul>
-        <li><a href=""https://developer.mozilla.org/en-US/docs/Web/Security/CSP/Introducing_Content_Security_Policy>CSP</a>: Content Security Policy</li>
+        <li><a href="https://developer.mozilla.org/en-US/docs/Web/Security/CSP/Introducing_Content_Security_Policy">CSP</a>: Content Security Policy</li>
         <li><a href="https://developer.mozilla.org/en-US/docs/Web/Security/HTTP_strict_transport_security">STS</a>: Strict Transport Security</li>
         <li><a href="https://developer.mozilla.org/en-US/docs/Web/Security/Public_Key_Pinning">PKP</a>: Public Key Pins</li>
         <li><a href="https://developer.mozilla.org/en-US/docs/Web/Security/Subresource_Integrity">SRI</a>: Sub Resource Integrity</li>
