Update about text.

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -91,7 +91,7 @@
 I have the privilege to work in a team of experts in python, javascript
 and design.</p>
 
-<p>The key areas of experience include HTML, CSS, Sass, jQuery, DOM scripting and Django templating.
+<p>The key areas of experience include HTML, CSS, Sass, DOM scripting, jQuery and Django templating.
 I also have experience with XML, XSLT, <a href="http://www.plone.org">Plone</a> and
 Zope Page Templates (templating language used in Plone).</p>
 
